# go-to-market-agent

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  demo.tape  pyproject.toml
.github/workflows/: ci.yml  report.yml
docs/: ARCHITECTURE.md  CONFIGURATION.md  EXTENDING.md  SETUP.md  sample-report.md
src/gtm_agent/: __init__.py  cli.py  config.py  server.py  urls.py
src/gtm_agent/engine/: __init__.py  demo.py  graph.py  pipeline.py
src/gtm_agent/engine/eval/: __init__.py  harness.py
src/gtm_agent/engine/nodes/: __init__.py  analysts.py  annotators.py  assembly.py  brief.py  enrich.py  overrides.py  qa_gates.py  synthesizers.py
src/gtm_agent/engine/research/: __init__.py  researcher.py  supervisor.py  tools.py
src/gtm_agent/extensions/: __init__.py
src/gtm_agent/extensions/analysts/: __init__.py  pricing_intel.py
src/gtm_agent/extensions/outputs/: __init__.py  pdf.py  slack.py  webhook.py
src/gtm_agent/extensions/sources/: __init__.py  g2_reviews.py  news.py  reddit.py
src/gtm_agent/integrations/: __init__.py  ad_library.py  ahrefs.py  apify_client.py  app_store.py  dataforseo.py  google_trends.py  similarweb.py  tavily.py  wayback.py  youtube.py
src/gtm_agent/integrations/notify/: __init__.py  slack.py  telegram.py
src/gtm_agent/integrations/output/: __init__.py  charts.py  html.py  markdown.py  render_model.py
src/gtm_agent/integrations/output/notion/: __init__.py  renderer.py
src/gtm_agent/llm/: __init__.py  config.py  router.py
src/gtm_agent/models/: __init__.py  competitor.py  report.py  sections.py  state.py
src/gtm_agent/plugins/: __init__.py  protocols.py  registry.py
src/gtm_agent/prompts/: __init__.py  analyst_brand_positioning_system.txt  analyst_competitive_system.txt  analyst_consumer_system.txt  analyst_global_market_system.txt  analyst_regional_pulse_system.txt  analyst_tech_system.txt  compress_research_system.txt  eval_judge_system.txt  qa_reviewer_system.txt  researcher_system.txt  supervisor_system.txt  synth_exec_summary_system.txt  synth_scoreboard_system.txt  synth_strategic_system.txt
src/gtm_agent/storage/: __init__.py  checkpoint.py  store.py
src/gtm_agent/templates/: __init__.py  corrections.example.yaml  tenant.example.yaml
tests/: conftest.py  test_analysts.py  test_annotators.py  test_assembly.py  test_config.py  test_demo.py  test_enrich.py  test_eval.py  test_graph.py  test_llm.py  test_models.py  test_output.py  test_qa_gates.py  test_research.py  test_smoke.py  test_storage.py  test_synthesizers.py
