[project]
name = "go-to-market-agent"
version = "0.1.0"
description = "A config-driven, multi-agent market-intelligence engine. Monthly competitive and go-to-market reports from agentic web research and multi-source data fusion."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Max Romanov" }]
keywords = [
  "market-intelligence",
  "competitive-intelligence",
  "go-to-market",
  "ai-agents",
  "langgraph",
  "llm",
  "research-agent",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]

dependencies = [
  "langgraph>=1.1",
  "langgraph-checkpoint-sqlite>=2.0",
  "langchain-core>=1.2",
  "langchain-anthropic>=0.3",
  "langchain-openai>=0.2",       # OpenAI-compatible: OpenAI, Ollama, imago.market
  "apify-client>=1.8",
  "tavily-python>=0.5",          # agentic web research (core to this engine)
  "pytrends>=4.9",               # Google Trends signal (free)
  "google-play-scraper>=1.2",    # app-store signal (free)
  "pydantic>=2.10",
  "pyyaml>=6.0",
  "feedparser>=6.0",
  "httpx>=0.28",
  "tenacity>=9.0",
  "structlog>=24.4",
  "typer>=0.12",
  "rich>=13.7",
]

[project.optional-dependencies]
mistral  = ["langchain-mistralai>=0.2"]
google   = ["langchain-google-genai>=2.0"]
telegram = ["aiogram>=3.14"]
server   = ["fastapi>=0.115", "uvicorn>=0.32"]
postgres = ["psycopg[binary]>=3.1", "langgraph-checkpoint-postgres>=2.0"]
eval     = ["deepeval>=2.0"]
dev      = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.6", "mypy>=1.11", "types-PyYAML>=6.0"]
# Note: the Notion output adapter and the Ahrefs / DataForSEO ("SEO") sources
# need only API keys (they are plain HTTP), so they require no extra install.
# See docs/SETUP.md and .env.example.

[project.scripts]
gtm = "gtm_agent.cli:app"

# Plugin discovery groups. Third-party packages register extensions by
# advertising entry points under these groups; the registry auto-loads them.
# See docs/EXTENDING.md.
[project.entry-points."gtm_agent.sources"]
[project.entry-points."gtm_agent.analysts"]
[project.entry-points."gtm_agent.synthesizers"]
[project.entry-points."gtm_agent.gates"]
[project.entry-points."gtm_agent.outputs"]
[project.entry-points."gtm_agent.providers"]

[project.urls]
Homepage = "https://github.com/maxrihter/go-to-market-agent"
Repository = "https://github.com/maxrihter/go-to-market-agent"
Documentation = "https://github.com/maxrihter/go-to-market-agent/tree/main/docs"
Issues = "https://github.com/maxrihter/go-to-market-agent/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gtm_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.ruff.lint.isort]
known-first-party = ["gtm_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
